src/app.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: oklch(0.81 0 89.88);

  --line: oklch(0.28 0 0);
  background-color: oklch(0.16 0 0);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
}

a {
  color: inherit;
  font-weight: 500;
  text-decoration: inherit;
}

html,
body {
  height: 100%;
  height: 100dvh;
  /* overflow: clip; */
  overflow-x: hidden;
  width: 100svw;
}


h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  /* cursor: pointer; */
  transition: border-color 0.25s;
}

button:hover {
  border-color: #646cff;
}

* {
  margin: 0;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #eeeeee;
  }

  button {
    background-color: #f9f9f9;
  }
}

